side gap in sidebar fixed and dashboard color theme changed to blue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -19,3 +19,6 @@ body, html {
   flex: 1; /* take remaining space */
   overflow-y: auto;
 }
+.container{
+  padding:0;
+}
